fixed extra spacing on svg's & corrected layout and spacing on the social section of the contact card

--- a/WIP/dtm_v2/css/main.css
+++ b/WIP/dtm_v2/css/main.css
@@ -1749,85 +1749,95 @@ CONTACT
   color: #0ef;
 }
 
-.contact__container--card-wrapper--connect--flex-wrapper__social--links-wrapper {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[4];
-      grid-template-columns: repeat(4, 1fr);
-  -ms-grid-rows: 1fr;
-      grid-template-rows: 1fr;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
+.contact__container--card-wrapper--connect--flex-wrapper__social {
+  width: 100%;
+  height: 4rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.contact__container--card-wrapper--connect--flex-wrapper__social--links-wrapper--linkedin {
-  -webkit-box-shadow: 0 0 8px 3px #393a53;
-          box-shadow: 0 0 8px 3px #393a53;
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  border-radius: 4px;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  color: #0e76a8;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
+.contact__container--card-wrapper--connect--flex-wrapper__social__social-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 50%;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
 }
 
-.contact__container--card-wrapper--connect--flex-wrapper__social--links-wrapper--linkedin:hover {
-  -webkit-box-shadow: 0 0 8px 3px #0ef;
-          box-shadow: 0 0 8px 3px #0ef;
+.contact__container--card-wrapper--connect--flex-wrapper__social__social-wrapper--links-wrapper {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
 }
 
-.contact__container--card-wrapper--connect--flex-wrapper__social--links-wrapper--twitter {
-  padding: 0.5rem;
-  background: radial-gradient(circle farthest-corner at 100% 100%, #393a53 1%, #ffffffe3 50%);
-  -webkit-box-shadow: 0 0 8px 3px #393a53;
-          box-shadow: 0 0 8px 3px #393a53;
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  border-radius: 10px;
+.contact__container--card-wrapper--connect--flex-wrapper__social__social-wrapper--links-wrapper--linkedin {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  overflow: hidden;
+  color: #0e76a8;
+  width: 2rem;
+  height: 2rem;
+}
+
+.contact__container--card-wrapper--connect--flex-wrapper__social__social-wrapper--links-wrapper--linkedin:hover {
+  -webkit-transform: scale(1.4);
+          transform: scale(1.4);
+}
+
+.contact__container--card-wrapper--connect--flex-wrapper__social__social-wrapper--links-wrapper--twitter {
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   color: #08a0e9;
-  width: 2.8rem;
-  height: 2.8rem;
+  width: 2rem;
+  height: 2rem;
 }
 
-.contact__container--card-wrapper--connect--flex-wrapper__social--links-wrapper--discord {
-  padding: 0.5rem;
-  background: radial-gradient(circle farthest-corner at 100% 100%, #393a53 1%, #ffffffe3 50%);
-  -webkit-box-shadow: 0 0 8px 3px #393a53;
-          box-shadow: 0 0 8px 3px #393a53;
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  border-radius: 10px;
+.contact__container--card-wrapper--connect--flex-wrapper__social__social-wrapper--links-wrapper--twitter:hover {
+  -webkit-transform: scale(1.4);
+          transform: scale(1.4);
+}
+
+.contact__container--card-wrapper--connect--flex-wrapper__social__social-wrapper--links-wrapper--discord {
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  overflow: hidden;
   color: #7289da;
-  width: 2.8rem;
-  height: 2.8rem;
+  width: 2rem;
+  height: 2rem;
 }
 
-.contact__container--card-wrapper--connect--flex-wrapper__social--links-wrapper--microsoft-teams {
-  background: radial-gradient(circle farthest-corner at 100% 100%, #393a53 1%, #ffffffe3 50%);
-  -webkit-box-shadow: 0 0 8px 3px #393a53;
-          box-shadow: 0 0 8px 3px #393a53;
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  border-radius: 10px;
+.contact__container--card-wrapper--connect--flex-wrapper__social__social-wrapper--links-wrapper--discord:hover {
+  -webkit-transform: scale(1.4);
+          transform: scale(1.4);
+}
+
+.contact__container--card-wrapper--connect--flex-wrapper__social__social-wrapper--links-wrapper--microsoft-teams {
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  overflow: hidden;
   color: #6264a7;
-  width: 2.8rem;
-  height: 2.8rem;
+  width: 2.25rem;
+  height: 2.25rem;
+}
+
+.contact__container--card-wrapper--connect--flex-wrapper__social__social-wrapper--links-wrapper--microsoft-teams:hover {
+  -webkit-transform: scale(1.6);
+          transform: scale(1.6);
 }
 
 .contact__container--card-wrapper--message {
